# actwise

./: 404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  index.html  pyproject.toml  sitemap.xml
agents/: index.html
agents/data/: index.html
agents/docs/: index.html
agents/main/: index.html
agents/main1/: index.html
agents/ops/: index.html
agents/utility/: index.html
assets/: extra.css
buckets/: index.html
buckets/core/: index.html
buckets/data/: index.html
buckets/docenter/: index.html
buckets/installer/: index.html
buckets/nicedl/: index.html
buckets/ops/: index.html
buckets/utils/: index.html
cli/: index.html
cli/actimize-installer/: index.html
cli/actone/: index.html
cli/actone-data/: index.html
cli/actone-local/: index.html
cli/actone-utils/: index.html
cli/docenter/: index.html
cli/full-reference/: index.html
cli/ndc/: index.html
components/core/actwise/: __init__.py  paths.py
components/data/: README.md  actone-data.example.yaml  actone-data.secrets.example.yaml
components/data/actone_data/: README.md  __init__.py  __main__.py  audit.py  cli.py  config.py  db.py  docs_enrich.py  evals.py  guardrails.py  schema_pack.py
components/data/actone_data_mcp/: Dockerfile  README.md  __init__.py  connector-properties.json  requirements.txt  server.py
components/docenter/: README.md
components/docenter/copilot_proxy/: README.md  __init__.py  app.py  openapi.json
components/docenter/docenter/: __init__.py  __main__.py  catalog_builder.py  catalog_renderer.py  cli.py
components/docenter/docenter_mcp/: .dockerignore  Dockerfile  README.md  TOOLS.md  __init__.py  _phase3_e2e.py  _phase3_proof.py  connector-properties.json  entrypoint.sh  server.py  user_store.py  user_token.py
components/docenter/extractor/: __init__.py  extractor.py  okf_migrate.py  pdf_exporter.py  requirements.txt  survey.py
components/docenter/mcp_server/: __init__.py  server.py
components/docenter/sharepoint/: requirements.txt  upload_pdfs.py  upload_with_cookies.py  uploader.py
components/installer/: README.md
components/installer/actinstaller/: __init__.py  cli.py  detect.py  runner.py
components/installer/actone_local/: __init__.py  cli.py  config.py  steps.py
components/nicedl/: README.md
components/nicedl/nicedl/: __init__.py  catalog.py  cli.py  keys.py  portal.py
components/ops/: README.md  actone-ops.example.yaml  actone-ops.secrets.example.yaml
components/ops/actone/: README.md  __init__.py  cli.py  client.py  fetch_spec.py  generate_collection.py  invoke.py  ops_config.py  paths.py  provision_from_url.py  registry.py  review_config.py  sanitize_spec.py  soap.py
components/ops/actone_mcp/: Dockerfile  server.py  (+3 more)
components/portal/: Dockerfile  README.md
components/utils/: README.md
components/wiki/: README.md  mkdocs.yml
config/: index.html
demo/: index.html
ecosystem/: index.html
faq/: index.html
glossary/: index.html
install/: index.html
legal/: index.html
mcp/: index.html
mcp/actimize-docs-mcp/: index.html
mcp/actone-data-mcp/: index.html
mcp/actone-mcp/: index.html
mcp/actone-utils-mcp/: index.html
mcp/docenter-mcp/: index.html
portal/: index.html
search/: search_index.json
security/: index.html
skills/: index.html
skills/actimize-docenter/: SKILL.md  index.html
skills/actimize-installer/: SKILL.md  index.html
skills/actimize-nicedl/: SKILL.md  index.html
skills/actone-api-suite/: REFERENCE.md  SKILL.md  index.html
skills/actone-data/: SKILL.md  index.html
skills/actone-local/: SKILL.md  index.html
skills/actone-ops/: REFERENCE.md  SKILL.md  index.html
skills/actone-utils/: REFERENCE.md  SKILL.md  index.html
skills/copilot-studio-browser-authoring/: REFERENCE.md  SKILL.md  index.html
skills/copilot-studio-browser-testing/: REFERENCE.md  SKILL.md  index.html
skills/docenter-live/: SKILL.md  index.html
(+123 files in other folders)
